<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>sawtooth-sdk</groupId>
		<artifactId>parent</artifactId>
		<version>0.1.2-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>
	<artifactId>sdk-common</artifactId>

	<name>Sawtooth Java SDK - Common artifacts</name>

	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>

				<dependency>
					<groupId>sawtooth-sdk</groupId>
					<artifactId>sawtooth-sdk-protos</artifactId>
					<version>0.1.2-SNAPSHOT</version>
				</dependency>
				
				<dependency>
					<groupId>com.salesforce.servicelibs</groupId>
					<artifactId>reactor-grpc-stub</artifactId>
				</dependency>

				<dependency>
					<groupId>javax.annotation</groupId>
					<artifactId>javax.annotation-api</artifactId>
				</dependency>

			</dependencies>
			<build>
				<finalName>${project.artifactId}</finalName>
			</build>
		</profile>
		<profile>
			<id>jdk8</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<jdk>1.8</jdk>
			</activation>
			<build>
				<finalName>${project.artifactId}</finalName>
				<plugins>
					<plugin>
						<artifactId>maven-jar-plugin</artifactId>
						<configuration>
							<classifier>jdk8</classifier>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.5.1</version>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
							<testSource>1.8</testSource>
							<testTarget>1.8</testTarget>
							<includes>
								<include>${basedir}/src/main/java6/**/*.java</include>
								<include>**/*.java</include>
							</includes>
							<excludes>
								<exclude>${basedir}/src/main/java/sawtooth/sdk/reactive/common/messaging/MessageFactory.java</exclude>
							</excludes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<dependencies>
		<dependency>
			<groupId>org.bitcoinj</groupId>
			<artifactId>bitcoinj-core</artifactId>
			<version>0.14.7</version>
			<exclusions>
				<exclusion>
					<groupId>com.lambdaworks</groupId>  <!-- Exclude invalid, unneeded signed jar -->
					<artifactId>scrypt</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.madgag.spongycastle</groupId>
					<artifactId>core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>io.grpc</groupId>
			<artifactId>grpc-stub</artifactId>
		</dependency>

		<dependency>
			<groupId>com.madgag.spongycastle</groupId>
			<artifactId>core</artifactId>
			<version>${spongycastle-version}</version>
		</dependency>

		<dependency>
			<groupId>com.madgag.spongycastle</groupId>
			<artifactId>prov</artifactId>
			<version>${spongycastle-version}</version>
		</dependency>

		<dependency>
			<groupId>com.madgag.spongycastle</groupId>
			<artifactId>bcpkix-jdk15on</artifactId>
			<version>${spongycastle-version}</version>
		</dependency>
		
		
		<dependency>
			<groupId>org.zeromq</groupId>
			<artifactId>jeromq</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${apachelog-version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${apachelog-version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${apachelog-version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-1.2-api</artifactId>
			<version>${apachelog-version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.protobuf</groupId>
			<artifactId>protobuf-java</artifactId>
		</dependency>

		<dependency>
			<groupId>io.grpc</groupId>
			<artifactId>grpc-netty</artifactId>
		</dependency>

		<dependency>
			<groupId>com.lmax</groupId>
			<artifactId>disruptor</artifactId>
		</dependency>

		<dependency>
			<groupId>io.grpc</groupId>
			<artifactId>grpc-protobuf</artifactId>
		</dependency>

	</dependencies>

	<build>
		<finalName>${project.artifactId}</finalName>
		<extensions>
			<extension>
				<groupId>kr.motd.maven</groupId>
				<artifactId>os-maven-plugin</artifactId>
				<version>1.6.0</version>
			</extension>
		</extensions>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>../protos</directory>
				<includes>
					<include>**/*.proto</include>
				</includes>
				<targetPath>${project.build.directory}/protoc</targetPath>
			</resource>
			<resource>
				<directory>src/main/resources/protos/</directory>
				<includes>
					<include>**/*.proto</include>
				</includes>
				<targetPath>${project.build.directory}/protoc</targetPath>
			</resource>
			<resource>
				<directory>src/main/resources/</directory>
				<includes>
					<include>*.properties</include>
				</includes>
				<filtering>true</filtering>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources/</directory>
				<includes>
					<include>*.properties</include>
				</includes>
				<filtering>true</filtering>
			</testResource>
			<testResource>
				<directory>src/test/resources/</directory>
				<includes>
					<include>*.key</include>
					<include>*.priv</include>
					<include>*.pub</include>
				</includes>
				<filtering>false</filtering>
			</testResource>
		</testResources>
	</build>
</project>
